# CustomPatcher

./: CMakeLists.txt  CMakePostBuild.bat  CMakeSettings.json  README.md  about.md  mod.json
.github/workflows/: android-build.yml  multi-platform-build.nyml  multi-platform-build.yml  multi-platform.yml
Src/: Version.rc  _Main.cpp
bindings/bindings/2.204/: GeometryDash.bro
bindings/bindings/2.205/: GeometryDash.bro
headers/: .ref  _main.hpp
src/: ModUtils.cpp  _YourLocalCfg.cpp  _a_local_config.cpp  main.cpp
